--- a/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
+++ b/frontend/src/app/components/sections/reservas/display/reservas-display.component.html
@@ -9,8 +9,7 @@
             {{data.value}}        
         </li>
        <div display-table class="mt-3">
-        <app-reservas-activity-table [reserva]="item" mode="display"> </app-reservas-activity-table> 
-
+            <app-reservas-activity-table [activities]="activities" mode="display"> </app-reservas-activity-table> 
        </div>
              
     </app-card-display>
