--- a/frontend/src/app/components/shared/form/custom-fields/item-picker/list/item-list.component.html
+++ b/frontend/src/app/components/shared/form/custom-fields/item-picker/list/item-list.component.html
@@ -4,10 +4,10 @@
             <tr (click)="display(data)" class="pointer">
                 <td >{{data | show:'empresa':'nombre'}} </td>
                 <td >{{data | show:'empresa':'documento'}} </td>
-                <td >
-                    <div><i class="bi bi-telephone me-2"></i> {{data | show:'empresa':'lista_telefonos'}}</div>
-                    <div><i class="bi bi-envelope me-2"></i> {{data | show:'empresa':'lista_emails'}} </div>
-                    <div><i class="bi bi-map me-2"></i> {{data | show:'empresa':'direccion'}} </div>                    
+                <td style="font-size: 95%;">
+                    <div><i class="bi bi-map me-2"></i> {{data | show:'empresa':'direccion'}} </div>      
+                    <div class="text-secondary"><i class="bi bi-telephone me-2"></i> {{data | show:'empresa':'telefonos'}}</div>
+                    <div class="text-secondary"><i class="bi bi-envelope me-2"></i> {{data | show:'empresa':'emails'}} </div>                                  
                 </td>               
             </tr>
         </ng-template>        
@@ -18,7 +18,7 @@
             <tr (click)="display(data,false,'tour')" class="pointer">
                 <td>{{data | show:'tour':'nombre'}} </td>
                 <td>{{data | show:'tour':'destino'}} </td>
-                <td>{{data | show:'tour':'horario_completo'}} </td>
+                <td>{{data | show:'tour':'inicio'}} {{data | show:'tour':'fin'}}</td>
              </tr>
         </ng-template>      
     </app-table>
@@ -27,11 +27,11 @@
         <ng-template let-data="data" #hoteles>
             <tr (click)="display(data,false,'hotel')" class="pointer">
                 <td>{{data | show:'hotel':'nombre'}} </td>
-                <td>{{data | show:'hotel':'tipo_categoria'}} </td>
+                <td>{{data | show:'hotel':'tipo'}} </td>
                 <td>{{data | show:'hotel':'direccion'}} </td>
                 <td> 
-                    <div><i class="bi bi-telephone me-2"></i> {{data | show:'hotel':'lista_telefonos'}}</div>
-                    <div><i class="bi bi-envelope me-2"></i> {{data | show:'hotel':'lista_emails'}} </div>  
+                    <div><i class="bi bi-telephone me-2"></i> {{data | show:'hotel':'telefonos'}}</div>
+                    <div><i class="bi bi-envelope me-2"></i> {{data | show:'hotel':'emails'}} </div>  
                 </td>
                 <td>{{data | show:'hotel':'propietario_nombre'}} </td>
             </tr>
@@ -41,17 +41,15 @@
         <ng-template let-data="data" #trabajadores>
             <tr (click)="display(data,false,'trabajador')" class="pointer">
                 <td>
-                    {{data | show:'trabajador':'nombre_completo'}} 
+                    {{data | show:'trabajador':'nombre'}} {{data | show:'trabajador':'apellidos'}} 
                     <div>
-                        <small class="text-secondary"><i class="bi bi-telephone me-2"></i> {{data | show:'trabajador':'lista_telefonos'}}</small><br>
-                        <small class="text-secondary"><i class="bi bi-envelope me-2"></i> {{data | show:'trabajador':'lista_emails'}} </small>
+                        <small class="text-secondary"><i class="bi bi-telephone me-2"></i> {{data | show:'trabajador':'telefonos'}}</small><br>
+                        <small class="text-secondary"><i class="bi bi-envelope me-2"></i> {{data | show:'trabajador':'emails'}} </small>
                     </div>           
                 </td>
                 <td>{{data | show:'trabajador':'documento'}} </td>
                 <td>{{data | show:'trabajador':'tipo'}} <small><em>({{data | show:'trabajador':'regimen'}} ) </em></small></td>
-                <td> 
-                    
-                </td>         
+                      
             </tr>
         </ng-template>
     </app-table>
