--- a/frontend/src/app/components/shared/form/input/input.component.html
+++ b/frontend/src/app/components/shared/form/input/input.component.html
@@ -75,6 +75,6 @@
 
 <!-- VALIDACION  -->
 
-<div  class="invalid-feedback d-block" *ngIf="field.touched && !field.valid"><!--  pongo aqui la validaciones porque sino me las cuenta como plantilla supongo que por ng if -->
-    {{ item | errors:type:field.name }}
-</div>
+<!-- <div  class="invalid-feedback d-block" *ngIf="field.touched && !field.valid"> pongo aqui la validaciones porque sino me las cuenta como plantilla supongo que por ng if -->
+    <!-- {{ item | errors:type:field.name }} -->
+<!-- </div>  -->
